--- a/flower_delivery/static/css/styles.css
+++ b/flower_delivery/static/css/styles.css
@@ -15,10 +15,11 @@ body {
 .nav-link {
     color: #000;
     font-weight: bold;
+    transition: color 0.3s ease; /* Плавный переход цвета */
 }
 
 .nav-link:hover {
-    color: #007bff;
+    color: #fff; /* Цвет ссылки при наведении — белый */
 }
 
 /* Стили для карточек каталога */
