--- a/flower_delivery/templates/shop/catalog.html
+++ b/flower_delivery/templates/shop/catalog.html
@@ -11,13 +11,13 @@
             <img src="{{ flower.image.url }}" class="card-img-top" alt="{{ flower.name }}" style="height: 200px; object-fit: cover;">
             <div class="card-body">
                 <h5 class="card-title text-white">{{ flower.name }}</h5>
-                <p class="card-text text-white">Price: ${{ flower.price }}</p>
+                <p class="card-text text-white">Цена: ₽{{ flower.price }}</p>
                 <div class="d-flex align-items-center mb-3">
                     <button class="btn btn-outline-light btn-sm me-2" onclick="changeQuantity(this, -1)">-</button>
                     <input type="number" value="1" class="form-control text-center" style="width: 60px;" min="1" data-price="{{ flower.price }}" data-id="{{ flower.id }}">
                     <button class="btn btn-outline-light btn-sm ms-2" onclick="changeQuantity(this, 1)">+</button>
                 </div>
-                <button class="btn btn-light w-100" onclick="addToCart({{ flower.id }}, this)">Add to Cart</button>
+                <button class="btn btn-light w-100" onclick="addToCart({{ flower.id }}, this)">Добавть в корзину</button>
             </div>
         </div>
     </div>
@@ -48,7 +48,7 @@
         .then(response => response.json())
         .then(data => {
             if (data.success) {
-                alert("Product added to cart!");
+                alert("Букет добавлен в корзину!");
             }
         });
     }
