--- a/flower_delivery/templates/shop/success_page.html
+++ b/flower_delivery/templates/shop/success_page.html
@@ -9,7 +9,7 @@
         <p>Спасибо за ваш заказ! Мы свяжемся с вами для подтверждения доставки.</p>
     </div>
     <a href="{% url 'home' %}" class="btn btn-pink mt-3">Вернуться на главную</a>
-    <a href="https://t.me/FlowerDeliveryshop_bot" target="_blank" class="btn btn-pink mt-3">Перейти в Телеграм бот</a>
+    <a href="https://t.me/FlDel_bot" target="_blank" class="btn btn-pink mt-3">Перейти в Телеграм бот</a>
 </div>
 
 <style>
